--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         sentryvalue = ""
 
         console.log(lotterynumbers)
-        alert(lotternumbers)
+        alert(lotterynumbers)
     </script>
 </html>
